--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -55,6 +55,8 @@
                         <li><a runat="server" href="~/Contact">Contact</a></li>
                         <li><a runat="server" href="~/SamplePages/SpecialEventsAdmin">SpecialEvents</a></li>
                          <li><a runat="server" href="~/SamplePages/ListView">ListView Display</a></li>
+                        <li><a runat="server" href="~/SamplePages/ReservationsByDate">Repeater Display</a></li>
+                         <li><a runat="server" href="~/SamplePages/CategoryMenuItems">Repeater Display2</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
