--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -58,6 +58,7 @@
                         <li><a runat="server" href="~/SamplePages/ReservationsByDate">Rpr Display</a></li>
                          <li><a runat="server" href="~/SamplePages/CategoryMenuItems">Rpr Display2</a></li>
                          <li><a runat="server" href="~/CommandPages/SpecialEventsAdmin">LV Crud</a></li>
+                        <li><a runat="server" href="~/CommandPages/WaiterAdmin">Waiter Crud</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
