--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -59,6 +59,7 @@
                          <li><a runat="server" href="~/SamplePages/CategoryMenuItems">Rpr Display2</a></li>
                          <li><a runat="server" href="~/CommandPages/SpecialEventsAdmin">LV Crud</a></li>
                         <li><a runat="server" href="~/CommandPages/WaiterAdmin">Waiter Crud</a></li>
+                        <li><a runat="server" href="~/Reports/MenuCategoryItemReport">Report</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
