--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -60,6 +60,8 @@
                          <li><a runat="server" href="~/CommandPages/SpecialEventsAdmin">LV Crud</a></li>
                         <li><a runat="server" href="~/CommandPages/WaiterAdmin">Waiter Crud</a></li>
                         <li><a runat="server" href="~/Reports/MenuCategoryItemReport">Report</a></li>
+                         <li><a runat="server" href="~/Reports/WaiterBillingReport">WaiterBilling</a></li>
+
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
