--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -53,6 +53,7 @@
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/Admin/Security/Default">UserPage</a></li>
                         <li><a runat="server" href="~/SamplePages/SpecialEventsAdmin">SpecialEvents</a></li>
                          <li><a runat="server" href="~/SamplePages/ListView">LV Display</a></li>
                         <li><a runat="server" href="~/SamplePages/ReservationsByDate">Rpr Display</a></li>
