--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -51,8 +51,8 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                      <%--  <li><a runat="server" href="~/About">About</a></li>
+                        <li><a runat="server" href="~/Contact">Contact</a></li>--%>
                         <li><a runat="server" href="~/Admin/Security/Default">UserPage</a></li>
                         <li><a runat="server" href="~/SamplePages/SpecialEventsAdmin">SpecialEvents</a></li>
                          <li><a runat="server" href="~/SamplePages/ListView">LV Display</a></li>
@@ -60,7 +60,7 @@
                          <li><a runat="server" href="~/SamplePages/CategoryMenuItems">Rpr Display2</a></li>
                          <li><a runat="server" href="~/CommandPages/SpecialEventsAdmin">LV Crud</a></li>
                         <li><a runat="server" href="~/CommandPages/WaiterAdmin">Waiter Crud</a></li>
-                        <li><a runat="server" href="~/Reports/MenuCategoryItemReport">Report</a></li>
+                     <%--   <li><a runat="server" href="~/Reports/MenuCategoryItemReport">Report</a></li>--%>
                         <!-- <li><a runat="server" href="~/Reports/WaiterBillingReport">WaiterBilling</a></li>-->
                         <!-- <li><a runat="server" href="~/UXPages/FrontDesk">WaiterBilling</a></li>-->
                     </ul>
